--- a/css/form2.css
+++ b/css/form2.css
@@ -1,10 +1,13 @@
 
 
+.container-config{
+    height: 72.5vh!important;
+}
 
 .create-post-section{
     background-color: var(--card-post-background-color);
-    margin-top: 2em;
-    margin-bottom: 3em;
+    margin-top: 1em;
+    margin-bottom: 1em;
     padding: 1em;
     border-radius: 10px;
 }
