--- a/css/view2.css
+++ b/css/view2.css
@@ -47,7 +47,7 @@
 
 article{
     font-size: var(--article-font-size);
-    margin-bottom: 1em;
+    margin-bottom: 4em!important;
 }
 
 .comments-section{
@@ -59,5 +59,24 @@ article{
 }
 
 .comments-section-view{
+    margin-top: 4em;
     margin-bottom: 3em;
+}
+
+.button-comment{
+    background-color: rgba(128, 128, 128, 0.44)!important;
+    transition: background 0.3s;
+   
+}
+
+.button-comment:hover{
+    background-color: rgba(128, 128, 128, 0.885)!important;
+}
+
+.form-button-comment{
+    margin-bottom: 2em;
+}
+
+.p-article{
+    margin-bottom: 4em;
 }
