--- a/css/index.css
+++ b/css/index.css
@@ -160,9 +160,10 @@ nav{
     background-color: var(--main-color);
     color: white;
     border-radius: .2em;
-    font-size: 10px;
+    font-size: 11px;
     font-weight: 600;
-    padding: 2px 2px;
+    padding: 4px 6px;
+    margin-top: 0.5em;
     transition: background 0.1s;
 
 }
@@ -216,4 +217,14 @@ nav{
     background-color: #ff7a38;
     min-height: 10px;
     
+}
+
+.button-tag{
+    color: white;
+    text-decoration: none;
+}
+
+.button-tag:hover{
+    text-decoration: none;
+    color: white;
 }
