--- a/assets/887a3681/pager.css
+++ b/assets/887a3681/pager.css
@@ -10,7 +10,7 @@
 
 ul.yiiPager
 {
-	font-size:11px;
+	font-size:16px;
 	border:0;
 	margin:0;
 	padding:0;
@@ -26,9 +26,9 @@ ul.yiiPager li
 ul.yiiPager a:link,
 ul.yiiPager a:visited
 {
-	border:solid 1px #9aafe5;
+	border:solid 1px #DEDEDE;
 	font-weight:bold;
-	color:#0e509e;
+	color:#f86011;
 	padding:1px 6px;
 	text-decoration:none;
 }
@@ -40,20 +40,21 @@ ul.yiiPager .page a
 
 ul.yiiPager a:hover
 {
-	border:solid 1px #0e509e;
+	border:solid 1px #f86011;
 }
 
 ul.yiiPager .selected a
 {
-	background:#2e6ab1;
+	background:#f86011;
 	color:#FFFFFF;
 	font-weight:bold;
 }
 
 ul.yiiPager .hidden a
 {
-	border:solid 1px #DEDEDE;
-	color:#888888;
+	border:solid 1px #dedede;
+	color:#dedede;
+	cursor: default;
 }
 
 /**
